# bullpen

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  build.rs  deny.toml  tauri.conf.json
.github/workflows/: landing-ci.yml  landing-pages.yml  release.yml  rust-ci.yml  security.yml
capabilities/: default.json
docs/: ARCHITECTURE.md  README.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  viewer.html  vite.config.ts  vite.viewer.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx  AppSidebar.tsx  navigation.ts
frontend/src/components/Agent/: AgentModelOptions.tsx  AgentSelector.tsx  MarkdownMessage.tsx  PythonCode.tsx  ToolCallCard.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  copy-button.tsx  dropdown-menu.tsx  editorial.tsx  input.tsx  scroll-area.tsx  select.tsx  sidebar.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/src/features/analysis/: AnalysisPage.tsx
frontend/src/features/compare/: CompareHeader.tsx  CompareMetricTable.tsx  CompareProjectionGrid.tsx  CompareSourceLedger.tsx  CompareView.tsx
frontend/src/features/portfolio/: PortfolioPage.tsx
frontend/src/features/report-viewer/: AnalysisBlockCard.tsx  AnalysisSection.tsx  ArgumentSpine.tsx  FinalStanceView.tsx  MetricDelta.tsx  MetricList.tsx  ProjectionView.tsx  ReportContent.tsx  ReportHero.tsx  ReportShell.tsx  ReportsPage.tsx  SourceList.tsx  StructuredArtifactView.tsx  badge-styles.tsx  markdown-components.tsx  projection-format.test.ts  projection-format.ts
frontend/src/features/run-analysis/: ProgressTimeline.tsx  ResearchComposer.tsx  ResearchPage.tsx  SourcesPopover.tsx  TimelineErrorBlock.tsx  errors.ts  progress.ts  useRunAnalysis.ts
frontend/src/features/settings/: AgentStatusList.tsx  DataSourcesSection.tsx  SettingsPage.tsx
frontend/src/features/updates/: UpdateDialog.tsx
frontend/src/hooks/: useBackendEvent.ts  useCopyToClipboard.ts  useDebouncedCallback.ts  useExpandableOverflow.ts  useQueryInvalidation.test.ts  useQueryInvalidation.ts  useUpdateCheck.ts
frontend/src/lib/: agents.ts  phosphor-icons.tsx
frontend/src/shared/api/: commands.ts  index.ts  queries.ts  query-client.ts
frontend/src/shared/lib/: version.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/viewer/: ViewerPage.tsx  main.tsx
icons/: icon.icns
landing/: .gitignore  index.html  landing.css  package.json  pnpm-lock.yaml  tailwind.config.js
landing/assets-src/: analysis-data-points.avif  analysis-final-stance.avif  analysis-projection.avif  analysis-scenario-matrix.avif  analysis-sources.avif  analysis-thesis.avif  new-analysis.avif  portfolio-rebalancing-scenarios.avif  portfolio-risk.avif  report-example.html
src/: analysis_prompt.hbs  lib.rs  main.rs  portfolio_analysis_prompt.hbs  prompts.rs  state.rs
src/commands/: error.rs  mod.rs  update.rs
src/domain/: analysis.rs  freshness.rs  mod.rs  portfolio.rs  run.rs
src/infra/: app_config.rs  csv_parser.rs  keystore.rs  mod.rs  price_history.rs  progress.rs  shell.rs
src/infra/acp/: agent_discovery.rs  mod.rs
src/infra/acp/analysis_generator/: client.rs  mod.rs  worker.rs
src/infra/acp/analysis_mcp_server/: config.rs  mod.rs  tool.rs
src/infra/db/: mod.rs
src/infra/sources/: mod.rs  provider.rs  registry.rs
src/infra/sources/providers/: alpha_vantage.rs  brave_search.rs  finnhub.rs  finviz.rs  fmp.rs  hacker_news.rs  mod.rs  newsapi.rs  polygon.rs  sec_edgar.rs  stocktwits.rs  tavily.rs  yahoo_finance.rs
tests/: db_roundtrip.rs
tests/fixtures/finviz/: aapl.html
