[package]
name = "bullpen"
version = "0.2.0"
edition = "2024"
default-run = "bullpen"
license = "MIT OR Apache-2.0"
description = "Bullpen is an ACP-powered local stock market analysis workbench."
repository = "https://github.com/puemos/bullpen"
keywords = ["stocks", "analysis", "ai", "acp", "tauri"]
categories = ["finance", "gui"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
agent-client-protocol = "0.9"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.4", features = ["derive"] }
dirs = "5"
env_logger = "0.11"
futures = "0.3"
handlebars = "6.3"
home = "0.5"
log = "0.4"
libc = "0.2"
pmcp = "1.8.6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-dialog = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1", features = ["v4"] }
which = "6"

[lib]
name = "bullpen"
path = "src/lib.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "bullpen"
path = "src/main.rs"
